# SDK_OLD

./: .gitignore  AUTHORS  CMakeLists.txt  LICENSE  README.md
docs/: READEME.md  README.md
experimental/HEnviroment/: main  main.cpp
experimental/HProcess/: HProcess.cpp
experimental/HSharedLibrary/: HSharedLibrary.cpp  HSharedLibrary.h  main.cpp  plugin.h  pluginA.cpp
experimental/HSharedMemory/: main.cpp
experimental/HStyleSheet/: main.cpp
experimental/HSystemMonitor/: main.cpp
experimental/OpenMP/: test9.cpp
experimental/QMLParser/: main.cpp
experimental/SFMLOgre/: main.cpp
experimental/Skia/: main.cpp  main1.cpp  main2.cpp
include/Core/: HApplication.h  HDir.h  HEnvironment.h  HFile.h  HLogging.h  HNameSpace.h  HObject.h  HProcessManager.h  HServerApplication.h  HSharedMemory.h  HSize.h  HString.h  HTest.h  HTypes.h
include/Graphics2D/: HBuffer.h  HMargins.h  HRect.h
include/Gui/: HCursor.h  HLayout.h  HLayoutItem.h  HMainWindow.h  HWindow.h
include/core/: HList.h  HObject.h  HString.h
src/Core/: HApplication.cpp  HDir.cpp  HEnvironment.cpp  HFile.cpp  HLogging.cpp  HObject.cpp  HProcessManager.cpp  HServerApplication.cpp  HSharedMemory.cpp  HSize.cpp  HString.cpp
src/Graphics2D/: HBuffer.cpp  HMargins.cpp  HRect.cpp
src/Gui/: HCursor.cpp  HLayout.cpp  HMainWindow.cpp  HWindow.cpp
src/core/: HObject.cpp  HString.cpp
tests/: test1.cpp  test4  test4.cpp
tests/test1/: test1.cpp
tests/test10/: test10.cpp
tests/test11/: test11.cpp
tests/test12/: test12.cpp
tests/test13/: test13.cpp
tests/test14/: test14.cpp
tests/test2/: test2.cpp
tests/test3/: test3.cpp
tests/test4/: test4.cpp
tests/test5/: test5.cpp
tests/test6/: test6.cpp
tests/test7/: test.qml  test7.cpp
tests/test8/: test8.cpp
tests/test9/: test09.cpp
